# strome-ir-matter

./: .gitignore  AC_CONTROLLER_README.md  BUILD_AND_TEST.md  CMakeLists.txt  IR_IMPLEMENTATION.md  README.md  Trotec_3550_IR_Protocol_Documentation.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6
components/button/: CMakeLists.txt
components/ds18b20/: CMakeLists.txt  ds18b20.c
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml  trotec_3550_ir.cpp  trotec_3550_ir.h
